--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 </div>     
             </form>
             <button class="btn btn-primary col-12" id="btn">Výsledek</button>
+            <div class="text-center color-black" id="vystup">
+            </div>
       </main>
       <footer class="footer">&copy; Vojtěch Binar, IT2</footer>
     <!-- Optional JavaScript -->
