--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
             <form>
                 <div class="form-group row text-center">
                     <label class="col-2 col-form-label" for="R">R:</label>
-                    <input type="text" class="form-control col-10" name="R" id="R"/>
+                    <input type="text" class="form-control col-10" placeholder="0" name="R" id="R"/>
                 </div>
                 <div class="form-group row text-center">
                     <label class="col-2 col-form-label" for="G">G:</label>
-                    <input type="text" class="form-control col-10" name="G" id="G"/>
+                    <input type="text" class="form-control col-10" placeholder="0" name="G" id="G"/>
                 </div>
                 <div class="form-group row text-center">
                     <label class="col-2 col-form-label" for="B">B:</label>
-                    <input type="text" class="form-control col-10" name="B" id="B" />
+                    <input type="text" class="form-control col-10" placeholder="0" name="B" id="B" />
                 </div>     
             </form>
             <button class="btn btn-primary col-12" id="btn">Výsledek</button>
