--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
       <header class="jumbotron bg-primary text-white text-center">
-          <h1>Barevný model RGB</h1>
+          <h1 class="display-1">Barevný model RGB</h1>
       </header>
       <main class="container">
             <form>
@@ -29,10 +29,10 @@
                 </div>     
             </form>
             <button class="btn btn-primary col-12" id="btn">Výsledek</button>
-            <div class="text-center color-black" id="vystup">
+            <div class="text-center color-black display-4 mt-4" id="vystup">
             </div>
       </main>
-      <footer class="footer">&copy; Vojtěch Binar, IT2</footer>
+      <footer class="page-footer font-small text-white text-center bg-primary mt-5 p-5">&copy; Vojtěch Binar, IT2</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
