--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="text-center color-black display-4 mt-4" id="vystup">
             </div>
       </main>
-      <footer class="page-footer font-small text-white text-center bg-primary mt-5 p-5">&copy; Vojtěch Binar, IT2</footer>
+      <footer style="position: absolute; bottom: 0; width: 100%;" class="page-footer font-small text-white text-center bg-primary mt-5 p-5">&copy; Vojtěch Binar, IT2</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
